backend/critterchat/http/static/chat.css
body.smallest {
    --application-text-size-16: 14px;
    --application-text-size-14: 12px;
    --application-text-size-12: 10px;
    --application-item-padding: 4px;
    --application-pane-padding: 8px;

    --search-fixed-height: 350px;
    --modal-fixed-height: 300px;
    --modal-item-padding: 8px;

    --input-h-padding: 7px;
    --input-v-padding: 4px;

    --button-border-radius: 5px;
    --button-h-padding: 10px;
    --button-v-padding: 4px;

    --error-border-radius: 5px;
    --error-padding: 8px;
    --error-flash-padding: 2px;
    --error-button-text-size: 10px;

    --header-height: 36px;
    --menu-pane-width: 241px;
    --info-pane-width: 241px;
    --pane-action-button-height: 36px;
    --pane-item-name-height: 28px;

    --icon-width: 28px;
    --icon-height: 28px;
    --big-icon-width: 56px;
    --big-icon-height: 56px;
    --room-icon-border-radius: 8px;

    --badge-top: -1px;
    --badge-left: 16px;
    --badge-width: 15px;
    --badge-height: 15px;
    --badge-text-size: 9px;
    --badge-text-top: 2px;

    --nav-button-top-margin: 2px;
    --nav-button-bottom-margin: -2px;

    --room-indicator-top: 16px;
    --room-indocator-left: 15px;
    --room-indicator-width: 15px;
    --room-indicator-height: 14px;
    --room-indocator-border-radius: 5px;

    --emoji-search-picker-top: 5px;
    --emoji-search-container: 250px;
    --emoji-search-container-margin: 5px;
    --emoji-search-contents: 188px;
    --emoji-search-padding: 2px;

    --attachment-picker-top: 3.5px;
    --attachment-picker-padding: 8px;
    --attachment-picker-item-height: 100px;
    --attachment-picker-alt-text-left: 4px;
    --attachment-picker-alt-text-bottom: 4px;
    --attachment-picker-alt-text-image-size: 300px;
    --attachment-picker-visible-left: 35px;
    --attachment-picker-visible-bottom: 4px;
    --attachment-picker-visible-top: -2.5px;

    --message-visible-top: 3.5px;
    --message-sensitive-top: 3.5px;

    --nav-button-width: 32px;
    --nav-button-height: 32px;

    --conversation-panel-height: 34px;
    --conversation-topic-max-height: 26px;
    --conversation-newmessage-icon-padding: 56px;
    --conversation-newmessage-indicator-top: -35px;
    --conversation-newmessage-indicator-width: 110px;
    --conversation-newmessage-indicator-border-radius: 10px;

    --message-load-more-height: 15px;
    --message-timestamp-padding: 4px;
    --message-attachment-padding: 5px;
    --message-combined-left-margin: 33px;
    --message-combined-text-top-margin: -7px;
    --message-combined-attachment-top-margin: 2px;
    --message-highlighted-h-padding: 5px;
    --message-highlighted-v-padding: 2px;
}

body.smaller {
    --application-text-size-16: 15px;
    --application-text-size-14: 13px;
    --application-text-size-12: 11px;
    --application-item-padding: 5px;
    --application-pane-padding: 9px;

    --search-fixed-height: 350px;
    --modal-fixed-height: 300px;
    --modal-item-padding: 9px;

    --input-h-padding: 7px;
    --input-v-padding: 4px;

    --button-border-radius: 5px;
    --button-h-padding: 10px;
    --button-v-padding: 4px;

    --error-border-radius: 5px;
    --error-padding: 9px;
    --error-flash-padding: 2px;
    --error-button-text-size: 10px;

    --header-height: 38px;
    --menu-pane-width: 255px;
    --info-pane-width: 255px;
    --pane-action-button-height: 38px;
    --pane-item-name-height: 30px;

    --icon-width: 32px;
    --icon-height: 32px;
    --big-icon-width: 64px;
    --big-icon-height: 64px;
    --room-icon-border-radius: 9px;

    --badge-top: -1px;
    --badge-left: 20px;
    --badge-width: 16px;
    --badge-height: 16px;
    --badge-text-size: 10px;
    --badge-text-top: 2px;

    --room-indicator-top: 20px;
    --room-indocator-left: 19px;
    --room-indicator-width: 15px;
    --room-indicator-height: 14px;
    --room-indocator-border-radius: 5px;

    --emoji-search-picker-top: 5px;
    --emoji-search-container: 250px;
    --emoji-search-container-margin: 5px;
    --emoji-search-contents: 186px;
    --emoji-search-padding: 2px;

    --attachment-picker-top: 3.5px;
    --attachment-picker-padding: 9px;
    --attachment-picker-item-height: 115px;
    --attachment-picker-alt-text-left: 4px;
    --attachment-picker-alt-text-bottom: 4px;
    --attachment-picker-alt-text-image-size: 325px;
    --attachment-picker-visible-left: 38px;
    --attachment-picker-visible-bottom: 4px;
    --attachment-picker-visible-top: -2.5px;

    --message-visible-top: 3.5px;
    --message-sensitive-top: 3.5px;

    --nav-button-width: 32px;
    --nav-button-height: 32px;

    --conversation-panel-height: 36px;
    --conversation-topic-max-height: 26px;
    --conversation-newmessage-icon-padding: 60px;
    --conversation-newmessage-indicator-top: -35px;
    --conversation-newmessage-indicator-width: 117px;
    --conversation-newmessage-indicator-border-radius: 10px;

    --message-load-more-height: 15px;
    --message-timestamp-padding: 4px;
    --message-attachment-padding: 5px;
    --message-combined-left-margin: 37px;
    --message-combined-text-top-margin: -7px;
    --message-combined-attachment-top-margin: 2px;
    --message-highlighted-h-padding: 5px;
    --message-highlighted-v-padding: 2px;
}
/* ... */

